sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:6: error: illegal start of simple expression
    if()
       ^AlgCocktailSort2:7: error: ')' expected but '}' found.
  }
  ^