sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var debut=0;
  var fin=getNombreValeurs()-2;
  for(i<- debut to fin){
    if()
  }
}